--- a/style.css
+++ b/style.css
@@ -1,18 +1,120 @@
-/* ### Primary
+/*
 
-- Red: hsl(0, 100%, 74%) 
-- Green: hsl(154, 59%, 51%)
+Mobile: 375px
+Desktop: 1440px
 
 ### Accent
 
-- Blue: hsl(248, 32%, 49%)
+- Blue: hsl(248, 32%, 49%) - #6055A5
 
 ### Neutral
 
-- Dark Blue: hsl(249, 10%, 26%) 
-- Grayish Blue: hsl(246, 25%, 77%) */
+- Dark Graysih Blue: hsl(249, 10%, 26%) - #3E3C49
+- Grayish Blue: hsl(246, 25%, 77%) - #B9B6D3
+
+ */
+
+* {
+  box-sizing: border-box;
+}
 
 body {
-  box-sizing: border-box;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  min-height: 100vh;
+  background: #ff7a7a url("/images/bg-intro-mobile.png");
   font: 1em/1.5 "Poppins", sans-serif;
+}
+
+.wrapper {
+  display: flex;
+  flex-direction: column;
+  width: 90%;
+  max-width: 1040px;
+}
+
+.txt-container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin-bottom: 25px;
+  text-align: center;
+  color: white;
+}
+
+.title {
+  width: 60%;
+  margin-bottom: 0;
+  margin-top: 0;
+  font-size: 1.5em;
+  line-height: 1.3em;
+}
+
+.hr {
+  margin: 0;
+  opacity: 0;
+}
+
+.description {
+  width: 65%;
+  margin-top: 1.1em;
+  font-size: 0.9em;
+  line-height: 1.6em;
+}
+
+.btn-bg-purp {
+  width: 100%;
+  margin-bottom: 20px;
+  line-height: 1.5em;
+  background-color: #6055a5;
+  box-shadow: 1px 7px 0px 0px rgba(0, 0, 0, 0.2);
+}
+
+.fieldset {
+  margin: 0;
+  padding: 1.3em;
+  border: none;
+  border-radius: 5px;
+  background-color: white;
+}
+
+.input {
+  width: 100%;
+  border: 1px solid lightgray;
+  border-radius: 5px;
+  padding: 0.5em;
+}
+
+.btn-bg-green {
+  width: 100%;
+  text-transform: uppercase;
+  background-color: #38cc8c;
+  box-shadow: -1px -4px 0px 0px inset rgba(0, 0, 0, 0.2);
+}
+
+/*//////// REPETITIVE STYLES ////////*/
+
+.txt-container,
+.form-container {
+  border: 1px solid black;
+}
+
+.btn {
+  padding: 1em;
+  border: none;
+  border-radius: 5px;
+  color: white;
+  cursor: pointer;
+}
+
+/*////// ELEMENT STATE STYLES //////*/
+
+.btn-bg-purp:hover {
+  background-color: rgba(96, 85, 165, 0.9);
+}
+
+.btn-bg-green:hover {
+  background-color: rgba(56, 204, 140, 0.9);
 }
