--- a/style.css
+++ b/style.css
@@ -1,17 +1,6 @@
 /*
-
 Mobile: 375px
 Desktop: 1440px
-
-### Accent
-
-- Blue: hsl(248, 32%, 49%) - #6055A5
-
-### Neutral
-
-- Dark Graysih Blue: hsl(249, 10%, 26%) - #3E3C49
-- Grayish Blue: hsl(246, 25%, 77%) - #B9B6D3
-
  */
 
 * {
@@ -45,7 +34,7 @@ body {
 }
 
 .title {
-  width: 60%;
+  width: 70%;
   margin-bottom: 0;
   margin-top: 0;
   font-size: 1.5em;
@@ -58,7 +47,7 @@ body {
 }
 
 .description {
-  width: 65%;
+  width: 85%;
   margin-top: 1.1em;
   font-size: 0.9em;
   line-height: 1.6em;
@@ -82,24 +71,43 @@ body {
 
 .input {
   width: 100%;
+  padding: 0.7em;
   border: 1px solid lightgray;
   border-radius: 5px;
-  padding: 0.5em;
+}
+
+.input:not(:first-child) {
+  margin-top: 0.9em;
+}
+
+.error {
+  margin-left: 3px;
 }
 
 .btn-bg-green {
   width: 100%;
+  margin: 0.9em 0;
   text-transform: uppercase;
   background-color: #38cc8c;
   box-shadow: -1px -4px 0px 0px inset rgba(0, 0, 0, 0.2);
 }
 
-/*//////// REPETITIVE STYLES ////////*/
-
-.txt-container,
-.form-container {
-  border: 1px solid black;
+.tc {
+  display: block;
+  width: 70%;
+  margin: auto;
+  font-size: 0.8em;
+  text-align: center;
+  color: #b9b6d3;
 }
+
+a {
+  text-decoration: none;
+  color: #f5818a;
+  font-weight: bold;
+}
+
+/*//////// REPETITIVE STYLES ////////*/
 
 .btn {
   padding: 1em;
@@ -115,6 +123,69 @@ body {
   background-color: rgba(96, 85, 165, 0.9);
 }
 
+.input::placeholder {
+  color: #3e3c49;
+  font-weight: bold;
+  font-size: 0.9em;
+}
+
+.hidden {
+  display: none;
+}
+
 .btn-bg-green:hover {
   background-color: rgba(56, 204, 140, 0.9);
+}
+
+a:hover {
+  text-decoration: underline;
+}
+
+/* /////////MEDIA QUERIES //////*/
+
+@media (min-width: 1000px) {
+  .wrapper {
+    flex-direction: row;
+  }
+
+  .txt-container,
+  .form-container {
+    flex: 1 1 50%;
+  }
+
+  .txt-container {
+    margin: 0;
+    justify-content: center;
+  }
+
+  .title,
+  .description {
+    text-align: left;
+  }
+
+  .title {
+    font-size: 3em;
+    width: 90%;
+  }
+
+  .description {
+    width: 90%;
+  }
+
+  .fieldset {
+    box-shadow: 1px 7px 0px 0px rgba(0, 0, 0, 0.2);
+    padding: 2.3em;
+  }
+
+  .input {
+    padding: 1em;
+  }
+
+  .input:not(:first-child) {
+    margin-top: 1.1em;
+  }
+
+  .tc {
+    width: 100%;
+  }
 }
