--- a/style.css
+++ b/style.css
@@ -143,7 +143,13 @@ a:hover {
 
 /* /////////MEDIA QUERIES //////*/
 
-@media (min-width: 1000px) {
+@media (min-width: 690px) and (max-width: 850px) {
+  .wrapper {
+    width: 80%;
+  }
+}
+
+@media (min-width: 850px) {
   .wrapper {
     flex-direction: row;
   }
