--- a/style.css
+++ b/style.css
@@ -1,8 +1,3 @@
-/*
-Mobile: 375px
-Desktop: 1440px
- */
-
 * {
   box-sizing: border-box;
 }
@@ -81,7 +76,13 @@ body {
 }
 
 .error {
-  margin-left: 3px;
+  display: flex;
+  flex-direction: row-reverse;
+  margin-top: 0.2em;
+  font-size: 0.7em;
+  font-style: italic;
+  font-weight: bolder;
+  color: #ff7a7a;
 }
 
 .btn-bg-green {
@@ -96,7 +97,7 @@ body {
   display: block;
   width: 70%;
   margin: auto;
-  font-size: 0.8em;
+  font-size: 0.7em;
   text-align: center;
   color: #b9b6d3;
 }
@@ -143,9 +144,15 @@ a:hover {
 
 /* /////////MEDIA QUERIES //////*/
 
-@media (min-width: 690px) and (max-width: 850px) {
+@media (min-width: 575px) and (max-width: 690px) {
   .wrapper {
     width: 80%;
+  }
+}
+
+@media (min-width: 690px) and (max-width: 850px) {
+  .wrapper {
+    width: 70%;
   }
 }
 
@@ -160,8 +167,8 @@ a:hover {
   }
 
   .txt-container {
-    margin: 0;
     justify-content: center;
+    margin: 0;
   }
 
   .title,
@@ -170,8 +177,8 @@ a:hover {
   }
 
   .title {
-    font-size: 3em;
     width: 90%;
+    font-size: 3em;
   }
 
   .description {
@@ -179,8 +186,8 @@ a:hover {
   }
 
   .fieldset {
-    box-shadow: 1px 7px 0px 0px rgba(0, 0, 0, 0.2);
     padding: 2.3em;
+    box-shadow: 1px 7px 0px 0px rgba(0, 0, 0, 0.2);
   }
 
   .input {
