--- a/style.css
+++ b/style.css
@@ -51,7 +51,7 @@ body {
 .btn {
   padding: 1em;
   border: none;
-  border-radius: 5px;
+  border-radius: 7px;
   color: white;
   cursor: pointer;
 }
@@ -68,7 +68,7 @@ body {
   margin: 0;
   padding: 1.3em;
   border: none;
-  border-radius: 5px;
+  border-radius: 7px;
   background-color: white;
 }
 
@@ -77,6 +77,7 @@ body {
   padding: 0.7em;
   border: 1px solid lightgray;
   border-radius: 5px;
+  position: relative;
 }
 
 .input:not(:first-child) {
@@ -151,6 +152,9 @@ a:hover {
 .error::placeholder {
   color: #ff7a7a;
 }
+
+/* .error-icon {
+} */
 
 /* /////////MEDIA QUERIES //////*/
 
