--- a/style.css
+++ b/style.css
@@ -70,6 +70,7 @@ body {
   border: none;
   border-radius: 7px;
   background-color: white;
+  position: relative;
 }
 
 .input {
@@ -77,7 +78,6 @@ body {
   padding: 0.7em;
   border: 1px solid lightgray;
   border-radius: 5px;
-  position: relative;
 }
 
 .input:not(:first-child) {
@@ -193,8 +193,12 @@ a:hover {
   color: #ff7a7a;
 }
 
-/* .error-icon {
-} */
+.error-icon {
+  width: 30px;
+  position: absolute;
+  margin-top: -45px;
+  right: 50px;
+}
 
 /* /////////MEDIA QUERIES //////*/
 
@@ -247,6 +251,10 @@ a:hover {
 
   .input:not(:first-child) {
     margin-top: 1.1em;
+  }
+
+  .error-icon {
+    margin-top: -50px;
   }
 
   .tc {
