--- a/style.css
+++ b/style.css
@@ -8,6 +8,7 @@ body {
   justify-content: center;
   align-items: center;
   min-height: 100vh;
+  padding: 10px;
   background: #ff7a7a url("/images/bg-intro-mobile.png");
   font: 1em/1.5 "Poppins", sans-serif;
 }
@@ -15,8 +16,8 @@ body {
 .wrapper {
   display: flex;
   flex-direction: column;
-  width: 90%;
-  max-width: 1040px;
+  width: 80%;
+  max-width: 460px;
 }
 
 .txt-container {
@@ -121,7 +122,7 @@ a {
   font-weight: bold;
 }
 
-/*////// ELEMENT STATE STYLES //////*/
+/*/////////// ELEMENT STATE STYLES ////////////*/
 
 .btn-bg-purp:hover {
   background-color: rgba(96, 85, 165, 0.9);
@@ -200,16 +201,9 @@ a:hover {
   right: 50px;
 }
 
-/* /////////MEDIA QUERIES //////*/
+/* ///////////// MEDIA QUERIES ////////////*/
 
-@media (min-width: 575px) {
-  .wrapper {
-    width: 80%;
-    max-width: 460px;
-  }
-}
-
-@media (min-width: 930px) {
+@media (min-width: 974px) {
   .wrapper {
     width: 95%;
     max-width: 1000px;
